static pages controller

--- a/app/views/hello_page/hello.html.erb
+++ b/app/views/hello_page/hello.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <footer>
-        <p class="footer-contents">Designed and developed with <a href="https://aws.amazon.com/careers/devtools-jobs/">♥</a> in Seattle.</p>
+        <p class="footer-contents">Designed and developed by Ted Kang!</p>
     </footer>
 
     <script src="application.js"></script>
