added bootstrap, styling, and added users model

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,12 @@
 <% provide(:title, "Home") %>
-<h1>AWS Codestar Sample App</h1>
-<p>
-  WOOOO LESS GOOO
-</p>
+<div class="center jumbotron">
+  <h1>AWS Codestar Sample App</h1>
+  <h2>
+    Test Test - Home page
+  </h2>
+
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("tedkang.jpg", alt: "Rails logo"),
+            'http://www.tedtkang.com' %>
